# transpose-test

./: .gitignore  CMakeLists.txt  README.md  run_docker.sh
dpct_output/: build.sh  transpose.dp.cpp
